Enable WebRTC screen capturer in WebEngine

This is disabled by default, and without it screen sharing doesn't work on Wayland
Port of https://invent.kde.org/network/konqueror/-/merge_requests/113

BUG: 450839
(cherry picked from commit 02feca74ce5497db466a6c547a320a4f23425ac4)